Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ gigs:
     location: De Morgenster
     venue: Hilversum (NL)
     url: 'http://www.seinconcerten.nl/'
-  - title: 'Who is the Bossa (with José Koning, Nelson faria and Daniel Pezzoti)'
+  - title: 'Who is the Bossa (with José Koning, Nelson Faria and Daniel Pezzoti)'
     date: 2016-10-21 20:00:00
     location: Ruïnekerk
     venue: Bergen (NL)
