--- a/_config.yml
+++ b/_config.yml
@@ -14,21 +14,16 @@ gigs:
     location: Birds Eye
     venue: Basel (CH)
     url: www.birdseye.ch
-  - title: '"networking and selfmanagement for musicians"'
-    date: 2016-10-26 14:30:00
-    location: Jazzschule
-    venue: Basel-Switserland
-    url:
   - title: Mike del Ferro trio
     date: 2017-01-14 20:00:00
     location: 10/14 Club
     venue: Warszaw-Poland
     url:
   - title: Mike del Ferro trio
-    date: 2017-01-17 20:00:00
-    location: TBA
+    date: 2017-01-17 19:30:00
+    location: NOSPR
     venue: Katowice-Poland
-    url:
+    url: 'http://www.nospr.org.pl/en/concerts/627/wtorkowy-klub-jazzowy-mike-del-ferro-trio-feat-ceumar'
   - title: Mike del Ferro / Mike Boddé pianoduo
     date: 2017-02-10 20:30:00
     location: De Doelen
@@ -44,16 +39,6 @@ gigs:
     location: De Morgenster
     venue: Hilversum (NL)
     url: 'http://www.seinconcerten.nl/'
-  - title: 'Who is the Bossa (with José Koning, Nelson Faria and Daniel Pezzoti)'
-    date: 2016-10-21 20:00:00
-    location: Ruïnekerk
-    venue: Bergen (NL)
-    url: 'http://www.ruinekerk.nl/agenda/'
-  - title: 'Who is the Bossa (with José Koning, Nelson Faria and Daniel Pezzoti)'
-    date: 2016-10-22 20:00:00
-    location: 'Porgy & Bess'
-    venue: Terneuzen (NL)
-    url:
   - title: Mike del Ferro
     date: 2016-12-10 20:30:00
     location: TBA
@@ -70,25 +55,15 @@ gigs:
     venue: Amsterdam (NL)
     url: www.splendoramsterdam.com
   - title: Mike del Ferro trio
-    date: 2016-11-01 20:00:00
-    location: Jazzclub
-    venue: Vorden (NL)
+    date: 2016-11-01 22:00:00
+    location: Luxor theater
+    venue: Zuthpen (NL)
     url:
   - title: Mike del Ferro trio
     date: 2016-12-11 22:00:00
     location: Jazzclub
-    venue: Zuthpen (NL)
+    venue: Vorden (NL)
     url:
-  - title: 'Who is the Bossa (with José Koning, Nelson Faria and Daniel Pezzoti)'
-    date: 2016-10-23 14:00:00
-    location: Berkhout
-    venue: Berkhouter Kerk
-    url:
-  - title: 'Who is the Bossa (with José Koning, Nelson Faria and Daniel Pezzoti)'
-    date: 2016-10-23 20:00:00
-    location: Splendor
-    venue: Amsterdam (NL)
-    url: www.splendoramsterdam.com
   - title: 'Mike del Ferro & Claron McFadden'
     date: 2016-11-20 14:30:00
     location: De Roode bioscoop
@@ -104,10 +79,10 @@ gigs:
     location: Brocope Theater
     venue: Oldeberkoop (Friesland/NL)
     url:
-  - title: Mike del Ferro trio with special guests
+  - title: Mike del Ferro trio with Niladri Kumar and Deborah Carter
     date: 2017-01-09 19:00:00
     location: TBA
-    venue: Sjarsha (Dubai)
+    venue: Sharja (Dubai)
     url:
   - title: 'Tour Sweden, jan 31-feb 8 more details soon'
     date: 2017-01-31 15:00:00
