Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ gigs:
     location: Jazzclub
     venue: Vorden (NL)
     url:
-  - title: Havana Jazz festival
-    date: 2016-12-15 20:00:00
-    location: Cuba
-    venue: Havana
+  - title: Tour Pakistan -Feb 16-25
+    date: 2017-02-16 20:00:00
+    location: tba
+    venue: Pakistan
     url:
   - title: Mike del Ferro trio with Niladri Kumar and Deborah Carter
     date: 2017-01-09 19:00:00
