Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ gigs:
     url: www.detoonzaal.nl
   - title: Mike del Ferro trio
     date: 2017-01-14 20:00:00
-    location: 10/14 Club
+    location: 12/14 Club
     venue: Warszaw-Poland
-    url:
+    url: www.12on14club.com
   - title: Mike del Ferro trio
     date: 2017-01-17 19:30:00
     location: NOSPR
@@ -23,17 +23,7 @@ gigs:
     date: 2017-01-07 20:00:00
     location: Splendor
     venue: Amsterdam
-    url: www.splendoramsterdam.com
-  - title: Mike del Ferro
-    date: 2016-12-10 20:30:00
-    location: TBA
-    venue: Antwerp (B)
-    url:
-  - title: Mike del Ferro trio
-    date: 2016-12-11 15:00:00
-    location: Jazzclub
-    venue: Vorden (NL)
-    url:
+    url: 'https://www.facebook.com/events/211712302612825/'
   - title: Tour Pakistan -Feb 16-25
     date: 2017-02-16 20:00:00
     location: tba
@@ -69,7 +59,7 @@ gigs:
     location: Tindall Villa
     venue: Bussum (NL)
     url: 'http://www.tindal.nl/Tindal/20170520.html'
-  - title: '4 pianists/4 grand pianos!'
+  - title: '4 pianists/4 grand pianos! Mike del Ferro, Harmen Fraanje, Marc van Roon & Hans Vroomans'
     date: 2017-01-22 17:30:00
     location: Beauforthuis
     venue: Austerlitz (Zeist) NL
