--- a/_config.yml
+++ b/_config.yml
@@ -79,3 +79,18 @@ gigs:
     location: University Quisqueya
     venue: 'Port au Prince, Haïti'
     url: 'http://papjazzhaiti.org/'
+  - title: Masterclass
+    date: 2017-01-16 10:30:00
+    location: Music Academy
+    venue: Krakau
+    url: Poland
+  - title: 'Mike Boddé & Mike del Ferro, Mike Kwadraat'
+    date: 2017-08-21 08:00:00
+    location: Concertgebouw
+    venue: Amsterdam
+    url: www.concertgebouw.nl
+  - title: 'Mike Boddé & Mike del Ferro, Mike Kwadraat'
+    date: 2017-03-16 00:00:00
+    location: TBA
+    venue: Leiden
+    url:
