Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ gigs:
     venue: Amsterdam
     url: www.concertgebouw.nl
   - title: 'Mike Boddé & Mike del Ferro, Mike Kwadraat'
-    date: 2017-03-16 00:00:00
+    date: 2017-03-16 20:00:00
     location: TBA
     venue: Leiden
-    url:
+    url: 'http://rgbfest.nl/#home'
