--- a/_config.yml
+++ b/_config.yml
@@ -89,3 +89,8 @@ gigs:
     location: TBA
     venue: Leiden
     url: 'http://rgbfest.nl/#home'
+  - title: 'Mike del Ferro, Jeroen van Veen and Others, Canto Ostinato meets Jazz'
+    date: 2017-03-17 20:00:00
+    location: Tenclub
+    venue: Amsterdam
+    url: 'https://www.facebook.com/onbehalfoftenclub/?fref=ts'
