--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,58 @@ gigs:
     location: Pianino theater ( in the Moof building)
     venue: Den Haag
     url:
-  - title:
-    date:
-    location:
+  - title: Canto Oastinato meets Jazz
+    date: 2017-06-16 20:00:00
+    location: Tenclub
+    venue: Amsterdam
+    url:
+  - title: 'Duo Remy van Kesteren & Mike del Ferro'
+    date: 2017-04-14 20:30:00
+    location: Splendor
+    venue: Amsterdam
+    url: www.splendoramsterdam.com
+  - title: Mike del Ferro trio
+    date: 2017-07-15 08:00:00
+    location: 'Krakow Jazzfestival, Poland'
+    venue: Krakow
+    url:
+  - title: 'Duo Jeroen van Veen & Mike del Ferro (morning concert!)'
+    date: 2017-07-30 00:00:00
+    location: Kasteeltuin Middachten
+    venue: Rheden (NL)
+    url:
+  - title: with Jeroen van Veen
+    date: 2017-09-29 20:00:00
+    location: 'Church Breda, more details soon'
+    venue:
+    url:
+  - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
+    date: 2018-02-02 20:00:00
+    location: 'Eindhoven, more details soon'
+    venue:
+    url:
+  - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
+    date: 2018-02-08 00:00:00
+    location: 'Nijmegen, more details will follow'
+    venue:
+    url:
+  - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
+    date: 2017-02-16 20:00:00
+    location: 'Leeuwarden, more details will follow'
+    venue:
+    url:
+  - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
+    date: 2018-02-20 20:00:00
+    location: 'Heiloo, more details will follow'
+    venue:
+    url:
+  - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
+    date: 2017-02-23 20:00:00
+    location: 'Zoetermeer, more details will follow'
+    venue:
+    url:
+  - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
+    date: 2018-02-24 20:00:00
+    location: 'Lelystad, more details will follow'
     venue:
     url:
