Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ gigs:
     location: Pianino theater ( in the Moof building)
     venue: Den Haag
     url:
-  - title: Canto Oastinato meets Jazz
+  - title: Canto Ostinato meets Jazz
     date: 2017-06-16 20:00:00
     location: Tenclub
     venue: Amsterdam
