--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,5 @@
 gigs:
   - title: 'Mike del Ferro & Claron McFadden'
-    date: 2017-03-26 16:00:00
-    location: De Steenakker
-    venue: Haps (Nijmegen)
-    url: 'http://www.desteenakker.nl/zondag-26-maart-2017-mike-del-ferro-en-claron-mcfadden/'
-  - title: 'Mike del Ferro & Claron McFadden'
     date: 2017-05-20 08:00:00
     location: Tindall Villa
     venue: Bussum (NL)
@@ -25,7 +20,7 @@ gigs:
     venue: Amsterdam
     url: www.splendoramsterdam.com
   - title: Mike del Ferro trio
-    date: 2017-07-15 08:00:00
+    date: 2017-07-15 20:00:00
     location: 'Krakow Jazzfestival, Poland'
     venue: Krakow
     url:
@@ -36,8 +31,8 @@ gigs:
     url:
   - title: with Jeroen van Veen
     date: 2017-09-29 20:00:00
-    location: 'Church Breda, more details soon'
-    venue:
+    location: Breda
+    venue: Orgelstorm festival
     url:
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-02 20:00:00
