Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -74,3 +74,8 @@ gigs:
     location: Den Haag (the Hague)
     venue: Universal center for Sufism
     url:
+  - title: Canto Ostinato meets Jazz with Jeroen van Veen and friends
+    date: 2017-06-16 08:00:00
+    location: Amsterdam
+    venue: Tenclub
+    url:
