Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ gigs:
     date: 2017-05-26 20:00:00
     location: Pianino theater ( in the Moof building)
     venue: Den Haag
-    url:
+    url: 'https://www.facebook.com/pianinotheater/?ref=ts&fref=ts'
   - title: 'Duo Remy van Kesteren & Mike del Ferro'
     date: 2017-04-14 20:30:00
     location: Splendor
