Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ gigs:
     date: 2017-04-14 20:30:00
     location: Splendor
     venue: Amsterdam
-    url: www.splendotamsterdam.com
+    url: 'http://splendoramsterdam.com/mike-del-ferro-remy-van-kesteren/'
   - title: Mike del Ferro trio
     date: 2017-07-15 20:00:00
     location: 'Krakow Jazzfestival, Poland'
