Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -79,3 +79,48 @@ gigs:
     location: Amsterdam (NL)
     venue: Munganga theater
     url: 'https://munganga.nl/mini2/programma/3815'
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2017-03-09 20:00:00
+    location: Drachten
+    venue:
+    url:
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2018-03-16 20:00:00
+    location: Laren
+    venue:
+    url:
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2018-03-23 00:00:00
+    location: Woerden
+    venue:
+    url:
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2018-03-28 00:00:00
+    location: Gouda
+    venue:
+    url:
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2018-03-30 20:00:00
+    location: Amstelveen
+    venue:
+    url:
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2018-03-31 20:00:00
+    location: Heerlen
+    venue:
+    url:
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2018-04-04 20:00:00
+    location: Delft
+    venue:
+    url:
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2018-04-07 20:00:00
+    location: Zwolle
+    venue:
+    url:
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2018-04-20 20:00:00
+    location: Dordrecht
+    venue:
+    url:
