Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -129,3 +129,8 @@ gigs:
     location: 'Jaffa Jazzfestival, Israel'
     venue: Israel
     url:
+  - title: 'Mike del Ferro trio Japan tour, more details soon'
+    date: 2017-11-24 00:00:00
+    location:
+    venue:
+    url:
