Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 gigs:
-  - title: 'Mike del Ferro & Claron McFadden'
-    date: 2017-05-20 08:00:00
-    location: Tindall Villa
-    venue: Bussum (NL)
-    url: 'http://www.tindal.nl/Tindal/20170520.html'
+  - title: "Tribute to Mike's father, Leonard del Ferro"
+    date: 2017-05-28 15:00:00
+    location: Elsrijk Openluchttheater
+    venue: Amstelveen (NL)
+    url: 'https://www.facebook.com/Openluchttheaterelsrijk1'
   - title: 'Mike Boddé & Mike del Ferro, Mike Kwadraat'
     date: 2017-08-21 08:00:00
     location: Concertgebouw
