Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -26,37 +26,37 @@ gigs:
     url: 'http://www.middachten.nl/zomerconcerten-in-de-tuin/'
   - title: with Jeroen van Veen
     date: 2017-09-29 20:00:00
-    location: Breda
+    location: Breda (NL)
     venue: Orgelstorm festival
     url:
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-02 20:15:00
-    location: Eindhoven
+    location: Eindhoven (NL)
     venue: Muziekgebouw Frits Philips
     url: www.muziekgebouweindhoven.nl
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-08 20:15:00
-    location: 'Nijmegen,'
+    location: Nijmegen (NL)
     venue: De Vereeniging
     url: www.stadsschouwburgendevereeniging.nl
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-16 20:00:00
-    location: Leeuwarden
+    location: Leeuwarden (NL)
     venue: De Harmonie
     url: www.harmonie.nl
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-20 20:15:00
-    location: Heiloo
+    location: Heiloo (NL)
     venue: De Beun
     url: www.theaterdebeun.nl
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-23 20:30:00
-    location: Zoetermeer
+    location: Zoetermeer (NL)
     venue: Stadstheater
     url: www.stadstheater.nl
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-24 20:30:00
-    location: Lelystad
+    location: Lelystad (NL)
     venue: Agora theater
     url: www.agora-lelystad.nl
   - title: Mike del Ferro trio
@@ -66,47 +66,47 @@ gigs:
     url:
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-03-09 20:30:00
-    location: Drachten
+    location: Drachten (NL)
     venue: De Lawei
     url: www.lawei.nl
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-03-16 20:15:00
-    location: Laren
+    location: Laren (NL)
     venue: Singer
     url: www.singerlaren.nl
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-03-23 20:15:00
-    location: Woerden
+    location: Woerden (NL)
     venue: Het Klooster / Theater
     url: www.kloosterwoerden.nl
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-03-28 08:30:00
-    location: Gouda
+    location: Gouda (NL)
     venue: Goudse Schouwburg
     url: www.goudseschouwburg.nl
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-03-30 20:30:00
-    location: Amstelveen
+    location: Amstelveen (NL)
     venue: Griffioen Theater
     url: www.griffioen.vu.nl
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-03-31 20:30:00
-    location: Heerlen
+    location: Heerlen (NL)
     venue: Parkstad Theater
     url: www.parkstadlimburgtheaters.nl
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-04-04 20:15:00
-    location: Delft
+    location: Delft (NL)
     venue: De Veste
     url: www.theaterdeveste.nl
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-04-07 20:00:00
-    location: Zwolle
+    location: Zwolle (NL)
     venue: Schouwburg Odeon
     url: www.zwolsetheaters.nl
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-04-20 20:30:00
-    location: Dordrecht
+    location: Dordrecht (NL)
     venue: Energiehuis
     url: www.kunstmin.nl
   - title: Mike del Ferro with many International Musicians
@@ -126,11 +126,11 @@ gigs:
     url: www.munganga.nl
   - title: 'Duo Mike Boddé and Mike del Ferro-Mike Kwadraat, CD Recordings'
     date: 2017-06-19 00:00:00
-    location: Rotterdam
+    location: Rotterdam (NL)
     venue: De Doelen
     url:
   - title: Duo Mike Boddé and Mike del Ferro-Mike Kwadraat
     date: 2018-03-10 20:00:00
-    location: Paradox
-    venue: Tilburg (NL)
+    location: Tilburg (NL)
+    venue: Paradox
     url: www.paradoxtilburg.nl
