Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -134,3 +134,8 @@ gigs:
     location: Tilburg (NL)
     venue: Paradox
     url: www.paradoxtilburg.nl
+  - title: Mike del Ferro and friends
+    date: 2017-10-07 20:00:00
+    location: Amsterdam (NL)
+    venue: Splendor
+    url: www.splendoramsterdam.com
