--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,6 @@ gigs:
     location: Concertgebouw
     venue: Amsterdam
     url: www.concertgebouw.nl
-  - title: 'Mike del Ferro & Ermal Rodi'
-    date: 2017-07-20 20:00:00
-    location: Tirana (Albania International Jazzfestival)
-    venue: Rogner
-    url:
   - title: 'Duo Jeroen van Veen & Mike del Ferro (morning concert!)'
     date: 2017-07-30 11:30:00
     location: Kasteeltuin Middachten
@@ -120,20 +115,10 @@ gigs:
     venue: Paradox
     url: www.paradoxtilburg.nl
   - title: Mike del Ferro and friends
-    date: 2017-10-07 20:30:00
+    date: 2017-09-30 20:30:00
     location: Amsterdam (NL)
     venue: Splendor
     url: www.splendoramsterdam.com
-  - title: 'Mike del Ferro & Ermal Rodi'
-    date: 2017-07-25 20:00:00
-    location: Vlore Taraca e Bashkise (Albania International Jazzfestival)
-    venue:
-    url:
-  - title: 'Mike del Ferro & Ermal Rodi'
-    date: 2017-07-21 00:00:00
-    location: Fier  (Albania International Jazzfestival)
-    venue: Apolloni
-    url:
   - title: 'Duo Jeroen van Veen & Mike del Ferro'
     date: 2017-12-09 20:00:00
     location: Amsterdam
@@ -154,3 +139,8 @@ gigs:
     location: Amsterdam
     venue: Roode Bioscoop
     url: www.roodebioscoop.nl
+  - title: 'Mike del Ferro, solo'
+    date: 2017-09-03 16:00:00
+    location: Amstelveen
+    venue: TBA
+    url:
