Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -99,11 +99,11 @@ gigs:
     location: Amsterdam
     venue: Munganga theatre
     url: www.munganga.nl
-  - title: Duo Jeroen van Veen and Mike del Ferro
-    date: 2017-07-31 20:00:00
-    location: Austerlitz (Zeist)
-    venue: Beauforthuis
-    url: www.beauforthuis.nl
+  - title: Mike del Ferro trio
+    date: 2018-02-18 15:00:00
+    location: Vorden (NL)
+    venue: Jazzclub
+    url:
   - title: Duo Mike Boddé and Mike del Ferro-Mike Kwadraat
     date: 2018-03-10 20:00:00
     location: Tilburg (NL)
