--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ gigs:
     location:
     venue:
     url:
-  - title: 'Mike del Ferro & Friends'
+  - title: Mike del Ferro trio
     date: 2017-09-29 20:30:00
     location: Amsterdam
     venue: Munganga theatre
@@ -109,27 +109,27 @@ gigs:
     location: Tilburg (NL)
     venue: Paradox
     url: www.paradoxtilburg.nl
-  - title: Mike del Ferro and friends
+  - title: 'Mike del Ferro, solo & with Friedel Mitas'
     date: 2017-09-30 20:30:00
     location: Amsterdam (NL)
     venue: Splendor
     url: www.splendoramsterdam.com
-  - title: 'Duo Jeroen van Veen & Mike del Ferro'
+  - title: Duo Jeroen van Veen & Mike del Ferro
     date: 2017-12-09 20:00:00
     location: Amsterdam
     venue: Ostade Theater
     url:
-  - title: 'Mike del Ferro & Jeroen van Veen'
+  - title: Mike del Ferro & Jeroen van Veen
     date: 2017-11-16 20:00:00
     location: Amsterdam
     venue: Roode Bioscoop
     url: www.roodebioscoop.nl
-  - title: 'Mike del Ferro & Mike Boddé'
+  - title: Mike del Ferro & Mike Boddé
     date: 2017-11-17 20:00:00
     location: Amsterdam
     venue: Roode Bioscoop
     url: www.roodebioscoop.nl
-  - title: 'Mike del Ferro & Remy van Kesteren'
+  - title: Mike del Ferro & Remy van Kesteren
     date: 2017-11-18 20:00:00
     location: Amsterdam
     venue: Roode Bioscoop
@@ -137,10 +137,20 @@ gigs:
   - title: 'Mike del Ferro, solo'
     date: 2017-09-03 16:00:00
     location: Amstelveen
-    venue: TBA
-    url:
+    venue: Jazz at IL
+    url: 'https://www.facebook.com/jazzatil'
   - title: 'South Africa, Masterclasses, Concerts and Recordings, more details soon'
     date: 2017-12-13 00:00:00
     location:
     venue:
+    url:
+  - title: Mike del Ferro trio with Surprise guest
+    date: 2017-10-01 16:00:00
+    location:
+    venue: Den Ilp (NL)
+    url:
+  - title: Solo recital
+    date: 2017-10-21 16:00:00
+    location: Amsterdam
+    venue: Cacao Museum
     url:
